; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-source.c_get_frame.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-source.c_get_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source_frame = type { i32 }
%struct.ffmpeg_source = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.obs_source_frame*)* @get_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_frame(i8* %0, %struct.obs_source_frame* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.obs_source_frame*, align 8
  %5 = alloca %struct.ffmpeg_source*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.obs_source_frame* %1, %struct.obs_source_frame** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.ffmpeg_source*
  store %struct.ffmpeg_source* %7, %struct.ffmpeg_source** %5, align 8
  %8 = load %struct.ffmpeg_source*, %struct.ffmpeg_source** %5, align 8
  %9 = getelementptr inbounds %struct.ffmpeg_source, %struct.ffmpeg_source* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %12 = call i32 @obs_source_output_video(i32 %10, %struct.obs_source_frame* %11)
  ret void
}

declare dso_local i32 @obs_source_output_video(i32, %struct.obs_source_frame*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
